# stt-tts-example

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  test_whisper.py
